# documind

./: .dockerignore  .gitignore  DAY_2_COMPLETE_EXPLANATION.txt  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  database.py  dependencies.py
app/api/routes/: auth.py  documents.py  query.py
app/core/: __init__.py
app/core/ingestion/: __init__.py  chunker.py  embedder.py  parser.py
app/core/retrieval/: __init__.py  retriever.py
app/models/: __init__.py  document.py  user.py
app/schemas/: auth.py  document.py  query.py
app/services/: auth_service.py
