[tool.poetry]
name = "documind"
version = "0.1.0"
description = "AI-powered document intelligence platform"
authors = ["Your Name <you@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# ── Web Framework ──────────────────────────────
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-multipart = "^0.0.9"      # for file uploads

# ── Database ───────────────────────────────────
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"       # postgres driver
alembic = "^1.13.0"              # DB migrations (Week 2+)

# ── Auth ───────────────────────────────────────
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# ── AI / LLM ───────────────────────────────────
openai = "^1.35.0"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-community = "^0.2.0"
langgraph = "^0.1.0"
langsmith = "^0.1.0"

# ── Vector DB ──────────────────────────────────
pinecone-client = "^4.0.0"

# ── Document Parsing ───────────────────────────
pypdf2 = "^3.0.0"
python-docx = "^1.1.0"

# ── Background Tasks ───────────────────────────
redis = "^5.0.0"

# ── Validation ─────────────────────────────────
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"     # for config.py

# ── Rate Limiting ──────────────────────────────
slowapi = "^0.1.9"

# ── HTTP Client ────────────────────────────────
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"               # for FastAPI TestClient

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
